src/component/projects/Projects.css
.projects {
  display: flex;
  align-items: start;
  gap: 2.4rem;
  /* padding-top: 7rem; */
}

/* //////////////////////////////////////////////////////////////////////////////////// */
/*? ________________________________________Left Section________________________________ */
.left-section {
  display: flex;
  flex-direction: column;
  gap: 1.4rem;
}
.left-section button {
  all: unset;
  cursor: pointer;
  width: 12rem;
  padding: 1rem 0;
  font-size: 1.3rem;
  font-weight: 500;
  text-align: center;
  text-transform: capitalize;
  opacity: 0.5;
  border-radius: 5px;
  background-color: var(--clr-secondry);
  color: var(--clr-primary);
  transition: 0.3s;
}
.left-section button.active {
  opacity: 1;
  font-weight: bold;
  letter-spacing: 0.6px;
  padding: 1.1rem 0;
  border: 1px solid var(--clr-secondry-dark);
}
.left-section button:hover {
  opacity: 0.7;
}
/* //////////////////////////////////////////////////////////////////////////////////// */
/*? ________________________________________Right Section________________________________ */

.right-section {
  display: flex;
  flex-wrap: wrap;
  column-gap: 1.6rem;
  row-gap: 3rem;
  justify-content: center;
  /* flex-grow: 1; */
}
.card {
  border: 2px solid var(--clr-primary);
  border-radius: 10px;
  background-color: var(--clr-primary-light);
  transition: 0.3s;
  box-shadow: 0 50px 100px rgba(50, 50, 93, 0.05),
    0 15px 35px rgba(50, 50, 93, 0.1), 0 5px 15px rgba(0, 0, 0, 0.1);
}
.card img {
  border-radius: 10px 10px 0 0;
  /* border-radius: 10px; */
}
.card:hover {
  border: 2px solid var(--clr-secondry-dark);

  scale: 1.01;
  rotate: 1deg;
  cursor: pointer;
}
.box {
  padding: 1rem 0.6rem;
}
.project-title {
  font-size: 2.5rem;

  color: var(--clr-dark);
}
.sup-title {
  font-size: 1.3rem;
  font-weight: 600;
  line-height: 1.7;
  margin-top: 0.7rem;
  margin-bottom: 1rem;
  color: var(--clr-light);
}
.demo-container {
  display: flex;
  gap: 1px;
  align-items: center;
  transition: 0.3s;
}
.demo-container:hover {
  scale: 1.05;
}

.card-links a {
  color: var(--clr-secondry-dark);
  text-decoration: none;
  font-weight: 600;
  font-size: 1.3rem;
}

.card-links {
  display: flex;
  justify-content: space-between;
}

/*? ------------------------icons------------------------ */
box-icon[name="right-arrow-alt"] {
  display: block;
  width: 18px;
  stroke: var(--clr-secondry-dark);
}
box-icon[name="github"] {
  display: block;
  width: 2.2rem;
  stroke: var(--clr-light);
}
box-icon[name="link"] {
  display: block;
  width: 2.2rem;
  stroke: var(--clr-light);
}
box-icon[name="link"]:hover,
box-icon[name="github"]:hover {
  width: 2.25rem;
  cursor: pointer;
  stroke: var(--clr-light-1);
}

/* //////////////////////////////////////////////////////////////////////////////////// */
/*? ________________________________________MEDIA______________________________________ */
@media (max-width: 37.5em) {
  .projects {
    flex-direction: column;
    align-items: center;
    gap: 2.5rem;
  }
  .left-section button {
    font-size: 1.6rem;
    width: 13rem;
  }
  .left-section {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
    gap: 1rem;
  }
  .sup-title {
    font-size: 1.6rem;
    margin-bottom: 1.5rem;
  }
  .card-links a {
    font-size: 1.5rem;
  }
  box-icon[name="link"],
  box-icon[name="github"] {
    width: 2.5rem;
  }
}

